# parking-management

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  deploy.sh  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  update.sh
alembic/: env.py
alembic/versions/: 20250126_initial_schema.py
app/: main.py
app/api/: deps.py  websockets.py
app/api/routes/: __init__.py  audit.py  config.py  vehicles.py
app/core/: config.py  database.py
app/models/: base.py  models.py
app/schemas/: base.py  schemas.py
app/services/: base.py  services.py
docs/: technical-requirements.md
docs/api/: api-design.md  api-docs.json  api-docs.md  index.md  websocket.md
docs/architecture/: adr-001-parking-system-architecture.md
docs/database/: migration-plan.md
tests/: conftest.py  test_audit.py  test_config.py  test_docs.py  test_vehicles.py  test_websocket.py
